# Ollama-OpenAI-Proxy-BMAD

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  =0.1.7  README.md  daily-standup-2025-01-24.md  epic-1-enhanced-draft.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_commit_hook.py
.github/: CI_SETUP.md
.github/workflows/: docker-build.yml  test.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_purpose.md  (+3 more)
api-specs/: ollama-openapi.yaml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docs/: brief.md  docker-deployment-guide.md  po_review_report.md  sdk-usage.md
epic-1-story-cards/: EPIC-1-COMPLETION-SUMMARY.md  README.md  epic-1-enhanced-draft.md  epic-1-validation-report.md  story-1.1-project-foundation.md  story-1.2-configuration-management.md  story-1.3-openai-client-wrapper.md  story-1.4-api-tags-endpoint.md  story-1.5-translation-engine.md  story-1.6-testing-infrastructure.md  story-1.7-ollama-sdk-compatibility.md
examples/: test_ollama_sdk.py
old-docs/: architecture-origin.md
scripts/: run_server_and_test.py  test_ci.sh  test_integration_setup.py  test_local.sh  test_with_server.sh
sprint-planning/: README.md  daily-standup-template.md  sprint-1-plan.md  sprint-1-retrospective-summary.md  sprint-retrospective-template.md  velocity-tracking-epic-1-complete.md  velocity-tracking.md
temp-docs/: architecture.md  prd.md
tests/: README.md  conftest.py  utils.py
tools/: validate_against_openapi.py
(+97 files in other folders)
